[tool.poetry]
name = "flask-sync"
version = "0.1.0"
description = ""
authors = ["Bulat Nigmatullin <bulatnig@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
